--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,14 @@
 body{
     background-color: rgb(240, 250, 260);
 }
+
+.swiper-button-next:after,
+.swiper-button-prev:after{
+    color: blue;
+}
+
+.swiper-pagination-progressbar .swiper-pagination-progressbar-fill{
+    background: blue !important;
+}
+
+/* TODO: Check the colors */
