feat: Complete the home page by adding recent offers, rent and sale

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,11 @@ body{
 }
 
 /* TODO: Check the colors */
+
+html::-webkit-scrollbar{
+    display: none;
+}
+
+html{
+    scrollbar-width: none;
+}
